array.island.Island.scala.error
Compilation error:
Island:3: error: not found: value min
  min = num(0);
  ^Island:4: error: not found: value max
  max = num(0);
  ^Island:6: error: value lengh is not a member of Array[Int]
  for (i <- 1 to num.lengh-1) {
                     ^Island:7: error: not found: value min
    if (num(i) < min) {
                 ^Island:8: error: not found: value min
      min = num(i);
      ^Island:11: error: not found: value max
    if (num(i) > max) {
                 ^Island:12: error: not found: value max
      max = mun(i);
      ^Island:16: error: not found: value levels
  levels[Boolean](max-min+1);
  ^Island:16: error: not found: value max
  levels[Boolean](max-min+1);
                  ^Island:16: error: not found: value min
  levels[Boolean](max-min+1);
                      ^Island:18: error: value lengh is not a member of Array[Int]
  for (i <- 0 to num.lengh-1) {
                     ^Island:19: error: not found: value levels
    levels(mun(i)-min) = true;
    ^Island:19: error: not found: value mun
    levels(mun(i)-min) = true;
           ^Island:19: error: not found: value min
    levels(mun(i)-min) = true;
                  ^Island:23: error: not found: value max
  for (i <- 0 to (max-min+1)) {
                  ^Island:23: error: not found: value min
  for (i <- 0 to (max-min+1)) {
                      ^Island:24: error: not found: value levels
    if (levels(i) == true) count += 1;
        ^